# repo-d0e90e58-f87bbc

./: .env.example  .gitignore  ANDROID_SPEC.md  ART_ASSET_LICENSES.md  AUDIT_REPORT.md  Architecture_Map.txt  BETA_TEST_PLAN.md  CLAUDE.md  COMPETITIVE_MATRIX.md  Dockerfile  FINAL_MVP_REPORT.md  FIXES_SUMMARY.md  INSTALL.md  MARKET_ANALYSIS.md  MULTI_DEVICE_TEST_PLAN.md  MVP_STATUS.md  Plink_Full_Audit.txt  README.md  TEST_PLAN.md  TEST_TWO_DEVICE_SYNC.md  apply_plink_diag.py  apply_plink_diag3.py  apply_plink_diag5.py  apply_plink_fixes.py  package-lock.json  package.json  project.yml  railway.json  start.sh  tsconfig.json  worklog.md
Plink/: Plink-Bridging-Header.h  RaveCloneApp.swift
Plink.xcodeproj/: project.pbxproj
PlinkTests/: AdminTests.swift  AmbientVideoSamplerTests.swift  AuthTests.swift  BillingTests.swift  ChatComposerStateTests.swift  ClockSynchronizerTests.swift  DanmakuEngineTests.swift  FakeAuthService.swift  FakePlaybackController.swift  FakeRoomService.swift  FriendsTests.swift  LifecycleTests.swift  PlinkLivingHomeTests.swift  PlinkThemeAndAITests.swift  PresenceTests.swift  ReactionPaletteTests.swift  RegressionMatrix.swift  RegressionMatrixTests.swift  RoomServiceTests.swift  SettingsTests.swift
RaveClone.xcodeproj/: project.pbxproj
android-client/: .gitignore  gradlew
docs/: APP_STORE_SUBMISSION.md  ASSISTANT_ORB_README.md  LIVEKIT_SETUP.md  MVP_FINAL_AUDIT_REPORT.md  MVP_FUNCTIONALITY_REPORT.md  SPRINT_P1P2_REPORT.md
server/: Dockerfile  (+1 more)
windows-client/src-tauri/: Cargo.toml  tauri.conf.json
windows-client/src-tauri/icons/: icon.icns
(+826 files in other folders)
