[package]
name = "plink-desktop"
version = "1.0.0"
description = "Plink — Watch together"
authors = ["Plink"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "http-request",
  "shell-open",
  "notification-all",
  "window-all",
  "system-tray",
  "clipboard-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
